[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-triage-openenv"
version = "1.0.0"
description = "OpenEnv-compliant clinical triage environment for AI agent training"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai==1.51.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "pytest==8.3.3",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[tool.setuptools.packages.find]
where = ["."]
