[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-triage-openenv"
version = "1.0.0"
description = "OpenEnv-compliant clinical triage environment for AI agent training"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai>=2.7.2",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]